enhanced ai features, categorization, refactored open ai and used gemini models